# swiftlint-autodetect

./: .justfile  Cargo.toml  README.markdown  README.md  pyproject.toml
Docs/: Notes.md
src/: main.rs  swiftlint.rs
swiftlint_autodetect/: main.py
