[package]
name = "swiftlint-autodetect"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Automatically generate Swiftlint rules from your codebase."

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
colored_markup = "0.1.1"
hashlink = "0.8.4"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_yml = "0.0.10"
shellexpand = "3.1.0"
tempfile = "3.10.1"
toml = "0.8.14"
yaml-rust2 = "0.8.1"
